apps/wikijs/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wikijs
spec:
  ports:
    - port: 80
      targetPort: http
  selector:
    app: wikijs
