apps/wikijs/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wikijs
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    external-dns.alpha.kubernetes.io/hostname: "wiki.arleskog.se"
spec:
  tls:
  - hosts:
    - wiki.arleskog.se
    secretName: wikijs-arleskog-se-cert
  rules:
  - host: wiki.arleskog.se
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: wikijs
            port:
              number: 80
